--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
                     </div>
                 </div>
                 <div class="benefits-visual">
+                    <div class="ayenyo-usage-image">
+                        <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                             alt="Medical professional using Ayenyo AI assistant on tablet" 
+                             class="usage-img">
+                        <div class="usage-overlay">
+                            <div class="usage-badge">
+                                <span class="usage-icon">🤖</span>
+                                <span class="usage-text">Ayenyo AI in Action</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="impact-metrics">
                         <div class="metric">
                             <span class="metric-value">40%</span>
