fix: Resolve image loading and mobile responsiveness issues
Image Loading Fixes:
- Replace problematic Unsplash URLs with reliable Picsum placeholder images
- Add error handling with fallback placeholder divs
- Implement proper image styling to ensure visibility
- Fix image display conflicts and CSS specificity issues

Mobile Responsiveness Fixes:
- Fix navigation container height and logo sizing on mobile
- Improve hero section button alignment and spacing
- Enhance mobile layout with proper padding and margins
- Add better breakpoint management for consistent behavior
- Fix container width and text sizing across all devices
- Improve touch targets and button sizing for mobile users

Technical Improvements:
- Add image placeholder styling with gradients
- Fix CSS conflicts that were hiding images
- Ensure proper fallback display when images fail to load
- Optimize mobile layout hierarchy and visual spacing
- Add proper error handling for image loading failures

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
             </div>
             <div class="hero-visual">
                 <div class="medical-hero-image">
-                    <img src="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                    <img src="https://picsum.photos/800/300?random=1" 
                          alt="Healthcare professionals using AI technology" 
-                         class="hero-medical-img">
+                         class="hero-medical-img"
+                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="image-placeholder" style="display:none; background: linear-gradient(135deg, #e2e8f0, #f1f5f9); height: 300px; border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #64748b; font-weight: 600;">
+                        Healthcare AI Image
+                    </div>
                     <div class="image-overlay">
                         <div class="confidence-badge">
                             <span class="badge-icon">🏆</span>
@@ -167,9 +171,20 @@
                 </div>
                 <div class="benefits-visual">
                     <div class="ayenyo-usage-image">
-                        <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+                        <img src="https://picsum.photos/800/280?random=2" 
                              alt="Medical professional using Ayenyo AI assistant on tablet" 
-                             class="usage-img">
+                             class="usage-img"
+                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="image-placeholder" style="display:none; background: linear-gradient(135deg, #e2e8f0, #f1f5f9); height: 280px; border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #64748b; font-weight: 600;">
+                            Ayenyo AI in Action
+                        </div>
+                        <div class="usage-overlay">
+                            <div class="usage-badge">
+                                <span class="usage-icon">🤖</span>
+                                <span class="usage-text">Ayenyo AI in Action</span>
+                            </div>
+                        </div>
+                    </div>
                         <div class="usage-overlay">
                             <div class="usage-badge">
                                 <span class="usage-icon">🤖</span>
@@ -204,8 +219,10 @@
             <div class="trust-grid">
                 <div class="trust-item">
                     <div class="trust-image">
-                        <img src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" 
-                             alt="Medical professional using AI technology" class="trust-img">
+                        <img src="https://picsum.photos/80/80?random=3" 
+                             alt="Medical professional using AI technology" 
+                             class="trust-img"
+                             onerror="this.style.display='none';">
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Sarah Chen, MD</h4>
@@ -215,8 +232,10 @@
                 </div>
                 <div class="trust-item">
                     <div class="trust-image">
-                        <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" 
-                             alt="Healthcare researcher with medical data" class="trust-img">
+                        <img src="https://picsum.photos/80/80?random=4" 
+                             alt="Healthcare researcher with medical data" 
+                             class="trust-img"
+                             onerror="this.style.display='none';">
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Michael Rodriguez, PhD</h4>
@@ -226,8 +245,10 @@
                 </div>
                 <div class="trust-item">
                     <div class="trust-image">
-                        <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" 
-                             alt="Medical team collaborating with technology" class="trust-img">
+                        <img src="https://picsum.photos/80/80?random=5" 
+                             alt="Medical team collaborating with technology" 
+                             class="trust-img"
+                             onerror="this.style.display='none';">
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Emily Johnson, MPH</h4>
