feat: Replace placeholder images with healthcare-themed styled components
- Hero section: Healthcare collaboration scene with hospital icon, doctor avatars, AI badge, and mini stats
- Benefits section: AI assistant device mockup with chat interface showing doctor query and AI response
- Trust section: Professional doctor avatars with credential badges (MD, PhD, MPH)
- All visuals now communicate medical AI purpose effectively
- Added comprehensive responsive styles for all new components
- Removed generic placeholder images in favor of themed styled elements

--- a/index.html
+++ b/index.html
@@ -56,19 +56,37 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="medical-hero-image">
-                    <img src="https://picsum.photos/800/300?random=1" 
-                         alt="Healthcare professionals using AI technology" 
-                         class="hero-medical-img"
-                         onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="image-placeholder" style="display:none; background: linear-gradient(135deg, #e2e8f0, #f1f5f9); height: 300px; border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #64748b; font-weight: 600;">
-                        Healthcare AI Image
-                    </div>
-                    <div class="image-overlay">
-                        <div class="confidence-badge">
-                            <span class="badge-icon">🏆</span>
-                            <span class="badge-text">Trusted by 500+ Healthcare Institutions</span>
+                <div class="medical-hero-visual">
+                    <div class="healthcare-scene">
+                        <div class="scene-header">
+                            <div class="hospital-icon">🏥</div>
+                            <div class="scene-title">
+                                <h4>Healthcare Collaboration</h4>
+                                <p>AI-Powered Medical Research</p>
+                            </div>
                         </div>
+                        <div class="scene-content">
+                            <div class="doctor-avatar">👨‍⚕️</div>
+                            <div class="doctor-avatar">👩‍⚕️</div>
+                            <div class="ai-badge">
+                                <span class="ai-icon">🤖</span>
+                                <span>Ayenyo AI</span>
+                            </div>
+                        </div>
+                        <div class="scene-stats">
+                            <div class="mini-stat">
+                                <span class="icon">📊</span>
+                                <span>Real-time Analysis</span>
+                            </div>
+                            <div class="mini-stat">
+                                <span class="icon">🔬</span>
+                                <span>Evidence-Based</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="confidence-badge-hero">
+                        <span class="badge-icon">🏆</span>
+                        <span class="badge-text">Trusted by 500+ Healthcare Institutions</span>
                     </div>
                 </div>
                 <div class="ai-interface">
@@ -170,19 +188,40 @@
                     </div>
                 </div>
                 <div class="benefits-visual">
-                    <div class="ayenyo-usage-image">
-                        <img src="https://picsum.photos/800/280?random=2" 
-                             alt="Medical professional using Ayenyo AI assistant on tablet" 
-                             class="usage-img"
-                             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div class="image-placeholder" style="display:none; background: linear-gradient(135deg, #e2e8f0, #f1f5f9); height: 280px; border-radius: 16px; display: flex; align-items: center; justify-content: center; color: #64748b; font-weight: 600;">
-                            Ayenyo AI in Action
-                        </div>
-                        <div class="usage-overlay">
-                            <div class="usage-badge">
-                                <span class="usage-icon">🤖</span>
-                                <span class="usage-text">Ayenyo AI in Action</span>
+                    <div class="ayenyo-usage-visual">
+                        <div class="usage-device">
+                            <div class="device-header">
+                                <div class="device-camera"></div>
+                                <div class="device-speaker"></div>
                             </div>
+                            <div class="device-screen">
+                                <div class="screen-header">
+                                    <span class="app-icon">🤖</span>
+                                    <span class="app-name">Ayenyo AI Assistant</span>
+                                    <span class="status-dot"></span>
+                                </div>
+                                <div class="screen-content">
+                                    <div class="user-query">
+                                        <div class="query-icon">👨‍⚕️</div>
+                                        <div class="query-bubble">
+                                            <p>Analyze patient data for cardiac risk assessment</p>
+                                        </div>
+                                    </div>
+                                    <div class="ai-response">
+                                        <div class="response-icon">🤖</div>
+                                        <div class="response-bubble">
+                                            <p><strong>Analysis Complete</strong></p>
+                                            <div class="analysis-item">✓ Risk factors identified</div>
+                                            <div class="analysis-item">✓ Treatment options ready</div>
+                                            <div class="analysis-item">✓ 98.5% confidence</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="usage-badge-overlay">
+                            <span class="usage-icon">💡</span>
+                            <span class="usage-text">Ayenyo AI in Action</span>
                         </div>
                     </div>
                         <div class="usage-overlay">
@@ -218,11 +257,9 @@
             <p class="section-subtitle">Healthcare experts worldwide rely on Ayenyo for critical decision support</p>
             <div class="trust-grid">
                 <div class="trust-item">
-                    <div class="trust-image">
-                        <img src="https://picsum.photos/80/80?random=3" 
-                             alt="Medical professional using AI technology" 
-                             class="trust-img"
-                             onerror="this.style.display='none';">
+                    <div class="trust-avatar">
+                        <div class="avatar-icon">👩‍⚕️</div>
+                        <div class="avatar-badge">MD</div>
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Sarah Chen, MD</h4>
@@ -231,11 +268,9 @@
                     </div>
                 </div>
                 <div class="trust-item">
-                    <div class="trust-image">
-                        <img src="https://picsum.photos/80/80?random=4" 
-                             alt="Healthcare researcher with medical data" 
-                             class="trust-img"
-                             onerror="this.style.display='none';">
+                    <div class="trust-avatar">
+                        <div class="avatar-icon">👨‍🔬</div>
+                        <div class="avatar-badge">PhD</div>
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Michael Rodriguez, PhD</h4>
@@ -244,11 +279,9 @@
                     </div>
                 </div>
                 <div class="trust-item">
-                    <div class="trust-image">
-                        <img src="https://picsum.photos/80/80?random=5" 
-                             alt="Medical team collaborating with technology" 
-                             class="trust-img"
-                             onerror="this.style.display='none';">
+                    <div class="trust-avatar">
+                        <div class="avatar-icon">👩‍💼</div>
+                        <div class="avatar-badge">MPH</div>
                     </div>
                     <div class="trust-content">
                         <h4>Dr. Emily Johnson, MPH</h4>
