fix: Use distinct medical and technology images, remove hero image whitespace
- Hero section: Medical professionals in clinical setting (medicine)
- Benefits section: AI technology dashboard with data analytics (technology)
- Clear visual distinction between healthcare and AI technology
- Fixed whitespace issue under hero image with line-height and font-size reset
- Images now properly communicate the dual nature of medical AI

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
             
             <div class="medical-hero-image">
-                <img src="https://images.pexels.com/photos/4386467/pexels-photo-4386467.jpeg?auto=compress&cs=tinysrgb&w=800" 
-                     alt="Doctor using AI technology for medical research" 
+                <img src="https://images.pexels.com/photos/4483610/pexels-photo-4483610.jpeg?auto=compress&cs=tinysrgb&w=800" 
+                     alt="Medical professionals consulting on patient care" 
                      class="hero-medical-img"
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-fallback" style="display:none;">
@@ -220,8 +220,8 @@
                 </div>
                 <div class="benefits-visual">
                     <div class="ayenyo-usage-image">
-                        <img src="https://images.pexels.com/photos/4386464/pexels-photo-4386464.jpeg?auto=compress&cs=tinysrgb&w=800" 
-                             alt="Healthcare professional using Ayenyo AI assistant" 
+                        <img src="https://images.pexels.com/photos/7887821/pexels-photo-7887821.jpeg?auto=compress&cs=tinysrgb&w=800" 
+                             alt="AI technology and data analytics dashboard" 
                              class="usage-img"
                              onerror="this.style.display='none'; this.parentElement.querySelector('.image-fallback').style.display='block';">
                         <div class="image-fallback" style="display:none;">
