fix: Replace warehouse-like image with proper medical professional image
- Changed hero image to doctor reviewing medical research (actual healthcare context)
- Fixed desktop layout spacing by setting min-height: 500px to fill the space
- Image now properly scales and fills container on all screen sizes
- Maintains responsive behavior on mobile devices

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             </div>
             
             <div class="medical-hero-image">
-                <img src="https://images.pexels.com/photos/4483610/pexels-photo-4483610.jpeg?auto=compress&cs=tinysrgb&w=800" 
-                     alt="Medical professionals consulting on patient care" 
+                <img src="https://images.pexels.com/photos/5452293/pexels-photo-5452293.jpeg?auto=compress&cs=tinysrgb&w=800&h=600" 
+                     alt="Doctor reviewing medical research and patient data" 
                      class="hero-medical-img"
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-fallback" style="display:none;">
