fix: Use high-quality medical image and fix hero section spacing
- Replaced with high-resolution medical professional image (1200x800, 2x DPR)
- Fixed spacing issue by changing hero-container align-items from center to start
- Image now fills entire height of content area without awkward gaps
- Removed min-height constraints causing misalignment
- Improved object-fit positioning for better image display

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             
             <div class="medical-hero-image">
-                <img src="https://images.pexels.com/photos/5452293/pexels-photo-5452293.jpeg?auto=compress&cs=tinysrgb&w=800&h=600" 
+                <img src="https://images.pexels.com/photos/8376299/pexels-photo-8376299.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
                      alt="Doctor reviewing medical research and patient data" 
                      class="hero-medical-img"
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
