feat: Move AI research prompt interface to hero section
- AI interface now visible immediately when users land on the page
- Shows real example query and response with research insights
- Positioned above stats for maximum visibility
- Added dedicated hero-specific styling with enhanced shadows and gradients
- Fully responsive design for all screen sizes
- No more stargazing - users see the research capability right away!

--- a/index.html
+++ b/index.html
@@ -45,18 +45,41 @@
                         <span class="button-icon">📅</span>
                     </button>
                 </div>
+                
+                <div class="ai-interface-hero">
+                    <div class="interface-header">
+                        <span class="status-indicator active"></span>
+                        <span class="interface-title">Ayenyo AI Assistant</span>
+                    </div>
+                    <div class="interface-content">
+                        <div class="query-example">
+                            <div class="query-label">Ask Anything</div>
+                            <p>"Latest treatments for Type 2 diabetes with cardiovascular comorbidities"</p>
+                        </div>
+                        <div class="response-preview">
+                            <div class="response-label">AI Response</div>
+                            <p>Analyzing 1,247 recent studies...</p>
+                            <div class="research-insights">
+                                <div class="insight">✓ SGLT-2 inhibitors show 23% reduction in cardiovascular events</div>
+                                <div class="insight">✓ GLP-1 agonists demonstrate superior weight management</div>
+                                <div class="insight">✓ Recent meta-analysis supports combination therapy</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="hero-stats">
                     <div class="stat-item">
                         <div class="stat-number">50K+</div>
-                        <div class="stat-label">Research Papers Analyzed</div>
+                        <div class="stat-label">Research Papers</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number">95%</div>
-                        <div class="stat-label">Accuracy Rate</div>
+                        <div class="stat-label">Accuracy</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number">24/7</div>
-                        <div class="stat-label">AI Assistance</div>
+                        <div class="stat-label">Available</div>
                     </div>
                 </div>
             </div>
