fix: Clean up and optimize hero section desktop layout
- Removed duplicate/leftover visual elements for cleaner code
- Balanced 50/50 grid layout (1fr 1fr) with proper 6rem gap
- Improved content spacing with flexbox gap instead of margins
- Better typography sizing: title 2.75rem, subtitle 1.15rem
- Enhanced stats layout with proper flex wrapping
- Medical image min-height 450px for better visual balance
- Reduced hero padding for more compact, professional look
- Clean, organized structure ready for production

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
+            <!-- Left Column: Main Content -->
             <div class="hero-content">
                 <h1 class="hero-title">
                     Transform Healthcare Research with <span class="gradient-text">AI-Powered Intelligence</span>
@@ -62,6 +63,7 @@
                 </div>
             </div>
             
+            <!-- Right Column: Medical Image -->
             <div class="medical-hero-image">
                 <img src="https://images.pexels.com/photos/8376299/pexels-photo-8376299.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
                      alt="Doctor reviewing medical research and patient data" 
@@ -86,60 +88,6 @@
                     </div>
                 </div>
                 <div class="confidence-badge">🔒 HIPAA Compliant</div>
-            </div>
-            <div class="hero-visual">
-                <div class="medical-hero-visual">
-                    <div class="healthcare-scene">
-                        <div class="scene-header">
-                            <div class="hospital-icon">🏥</div>
-                            <div class="scene-title">
-                                <h4>Healthcare Collaboration</h4>
-                                <p>AI-Powered Medical Research</p>
-                            </div>
-                        </div>
-                        <div class="scene-content">
-                            <div class="doctor-avatar">👨‍⚕️</div>
-                            <div class="doctor-avatar">👩‍⚕️</div>
-                            <div class="ai-badge">
-                                <span class="ai-icon">🤖</span>
-                                <span>Ayenyo AI</span>
-                            </div>
-                        </div>
-                        <div class="scene-stats">
-                            <div class="mini-stat">
-                                <span class="icon">📊</span>
-                                <span>Real-time Analysis</span>
-                            </div>
-                            <div class="mini-stat">
-                                <span class="icon">🔬</span>
-                                <span>Evidence-Based</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="confidence-badge-hero">
-                        <span class="badge-icon">🏆</span>
-                        <span class="badge-text">Trusted by 500+ Healthcare Institutions</span>
-                    </div>
-                </div>
-                <div class="ai-interface">
-                    <div class="interface-header">
-                        <span class="status-indicator active"></span>
-                        <span class="interface-title">Ayenyo AI Assistant</span>
-                    </div>
-                    <div class="interface-content">
-                        <div class="query-example">
-                            <p><strong>Query:</strong> "Latest treatments for Type 2 diabetes with cardiovascular comorbidities"</p>
-                        </div>
-                        <div class="response-preview">
-                            <p><strong>AI Response:</strong> Analyzing 1,247 recent studies...</p>
-                            <div class="research-insights">
-                                <div class="insight">✓ SGLT-2 inhibitors show 23% reduction in cardiovascular events</div>
-                                <div class="insight">✓ GLP-1 agonists demonstrate superior weight management</div>
-                                <div class="insight">✓ Recent meta-analysis supports combination therapy</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         
