refactor: Update hero image to medical AI research theme and remove unused CSS
- Changed hero image to medical AI research with digital health data visualization
- Removed 238 lines of unused healthcare-scene fallback CSS
- Simplified image fallback to basic text display
- Cleaned up responsive styles for removed components
- Reduced styles.css from 1988 to 1750 lines (12% reduction)
- Reduced index.html from 394 to 378 lines

--- a/index.html
+++ b/index.html
@@ -65,27 +65,12 @@
             
             <!-- Right Column: Medical Image -->
             <div class="medical-hero-image">
-                <img src="https://images.pexels.com/photos/2881229/pexels-photo-2881229.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
-                     alt="DNA structure and medical data on computer screen showing AI technology integration" 
+                <img src="https://images.pexels.com/photos/8438922/pexels-photo-8438922.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
+                     alt="Medical AI research with digital health data visualization and analysis" 
                      class="hero-medical-img"
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-fallback" style="display:none;">
-                    <div class="healthcare-scene">
-                        <div class="scene-header">
-                            <div class="hospital-icon">🏥</div>
-                            <div class="ai-badge">✨ AI-Powered</div>
-                        </div>
-                        <div class="doctor-avatars">
-                            <div class="doctor-avatar">👨‍⚕️</div>
-                            <div class="doctor-avatar">👩‍⚕️</div>
-                            <div class="doctor-avatar">👨‍🔬</div>
-                        </div>
-                        <div class="mini-stats">
-                            <div class="mini-stat">⏱️ 24/7 Available</div>
-                            <div class="mini-stat">✅ 95% Accuracy</div>
-                            <div class="mini-stat">📊 50K+ Papers</div>
-                        </div>
-                    </div>
+                    🏥 Medical AI Research Assistant
                 </div>
                 <div class="confidence-badge">🔒 HIPAA Compliant</div>
             </div>
