perf: Optimize scroll performance and update hero image to tech theme
Hero Image Improvements:
- Updated to DNA helix and molecular technology visualization
- Changed badge to 'AI-Powered Analysis' to match tech focus
- Enhanced alt text for better accessibility

Performance Optimizations:
- Removed expensive backdrop-filter properties (major scroll lag cause)
- Replaced backdrop-filter with solid backgrounds for better performance
- Optimized transitions from 'all' to specific properties (transform, opacity)
- Reduced hover scale effects (1.08x -> 1.03x for features, 1.02x -> 1.01x for hero)
- Added will-change: transform for GPU acceleration
- Added backface-visibility: hidden to prevent flickering
- Shortened transition durations for snappier feel
- Replaced --transition-smooth (0.5s) with faster 0.3s transitions

Expected Results: Significantly smoother scrolling and improved interaction performance

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                 </div>
             </div>
             
-            <!-- Right Column: Medical Image -->
+            <!-- Right Column: Medical Technology Image -->
             <div class="medical-hero-image">
-                <img src="https://images.pexels.com/photos/8867434/pexels-photo-8867434.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
-                     alt="Medical professional using advanced healthcare technology and AI systems" 
+                <img src="https://images.pexels.com/photos/3962280/pexels-photo-3962280.jpeg?auto=compress&cs=tinysrgb&w=1200&h=800&dpr=2" 
+                     alt="Advanced DNA helix and molecular technology visualization for AI medical research" 
                      class="hero-medical-img"
                      onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-fallback" style="display:none;">
-                    Medical AI Research Assistant
+                    AI Medical Technology
                 </div>
-                <div class="confidence-badge">HIPAA Compliant</div>
+                <div class="confidence-badge">AI-Powered Analysis</div>
             </div>
         </div>
         
